// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-button should be renderable as a custom link element 1`] = `
<Link
  className="
    button
    type-normal
    size-s
    false
    false
    interactive
    
  "
  to="my/path"
>
  Hello
</Link>
`;

exports[`fyndiq-component-button should be renderable as a link 1`] = `
<a
  className="
    button
    type-normal
    size-s
    false
    false
    interactive
    
  "
  href="#hello"
  onClick={[Function]}
>
  Hello
</a>
`;

exports[`fyndiq-component-button should be rendered without props 1`] = `
<button
  className="
    button
    type-normal
    size-s
    false
    false
    interactive
    
  "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a disabled prop 1`] = `
<button
  className="
    button
    type-normal
    size-s
    false
    false
    disabled
    
  "
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a horizontal prop 1`] = `
<button
  className="
    button
    type-normal
    size-s
    horizontal
    false
    interactive
    
  "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a htmlType prop 1`] = `
<button
  className="
    button
    type-normal
    size-s
    false
    false
    interactive
    
  "
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a pressed prop 1`] = `
<button
  className="
    button
    type-normal
    size-s
    false
    pressed
    interactive
    
  "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a size prop 1`] = `
<button
  className="
    button
    type-normal
    size-xs
    false
    false
    interactive
    
  "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a type prop 1`] = `
<button
  className="
    button
    type-primary
    size-s
    false
    false
    interactive
    
  "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;
